Realize all business logic for project. Backend ready. Client side and back side interaction.